Update latex with LCCN

--- a/public_domain/lippmann-1920/latex/liberty-latex.tex
+++ b/public_domain/lippmann-1920/latex/liberty-latex.tex
@@ -304,7 +304,7 @@
 
 \par \smallcaps{DOI} \href{https://doi.org/10.32376/3f8575cb.2e69e142}{10.32376/3f8575cb.2e69e142}
 
-\par \smallcaps{Library of Congress Control Number} LCCN NO.
+\par \smallcaps{Library of Congress Control Number} 2020950484
 
 \par\textit{Edition 1 published in November 2020}
 
