Update to remove twoside

--- a/public_domain/lippmann-1920/latex/liberty-print-latex.tex
+++ b/public_domain/lippmann-1920/latex/liberty-print-latex.tex
@@ -1,4 +1,4 @@
-\documentclass[openany,nobib,twoside,nohyper]{tufte-book}
+\documentclass[openany,nobib,nohyper]{tufte-book}
 
 %\hypersetup{colorlinks=true,allcolors=[RGB]{97,15,11}}
 
