Update to remove twoside

--- a/public_domain/lippmann-1920/latex/liberty-print-latex.tex
+++ b/public_domain/lippmann-1920/latex/liberty-print-latex.tex
@@ -3,7 +3,7 @@
 %\hypersetup{colorlinks=true,allcolors=[RGB]{97,15,11}}
 
 % For print version
-    % 1. change document class to add \documentclass[twoside,nohyper]
+    % 1. change document class to add \documentclass[nohyper]
     % 2. comment out \hypersetup above
     % 3. get rid of the doi marginnotes
     % 4. export PDF, then use Print Production -> preflight -> tool icon -> scale 229 x 177
