Upload print latex to get recto page correction

--- a/public_domain/lippmann-1920/latex/liberty-print-latex.tex
+++ b/public_domain/lippmann-1920/latex/liberty-print-latex.tex
@@ -268,7 +268,7 @@
 \mbox{}
 
 % Front matter
-\frontmatter\pagenumbering{roman}\setcounter{page}{3}
+\frontmatter\pagenumbering{roman}\setcounter{page}{1}
 
 % ONE full title page
 \begin{fullwidth}
@@ -343,6 +343,10 @@ January 1, 1920.
 \endgroup
 \begingroup
 
+\newpage
+\thispagestyle{plain} % empty
+\mbox{}
+
 % TOC
 
 \LARGE
@@ -352,6 +356,10 @@ January 1, 1920.
 \endgroup
 
 \end{fullwidth}
+
+\newpage
+\thispagestyle{plain} % empty
+\mbox{}
 
 % INTRODUCTION TO MSP EDITION
 \chapter[THE TWIN CRISES OF DEMOCRACY AND JOURNALISM]{THE TWIN CRISES OF DEMOCRACY AND\\ JOURNALISM\\ Introduction to the mediastudies.press edition}
