Update some cleanup

--- a/public_domain/rorty-1934/latex/masters-voice-latex.tex
+++ b/public_domain/rorty-1934/latex/masters-voice-latex.tex
@@ -911,7 +911,7 @@ in his broader analysis of the U.S. economy.\footnote{Veblen, \emph{Absentee Own
 \emph{The Theory of Business Enterprise} (1904) onward, is that
 businesses deliberately scale back production to protect their
 profits---to prevent prices from falling below costs. Veblen called this
-``sabotage,'' with profit-hoarding ``business'' hallowing out
+``sabotage,'' with profit-hoarding ``business'' hollowing out
 ``industry.'' Since the ``market is not to be overstocked to an
 unprofitable extent,'' the captains of business turn to the ``strategic
 withholding of productive efficiency.''\footnote{Veblen, \emph{Absentee Ownership}, 285.} Veblen regarded the
