Update title page latex and pdfs

--- a/public_domain/lippmann-1920/latex/liberty-latex.tex
+++ b/public_domain/lippmann-1920/latex/liberty-latex.tex
@@ -300,7 +300,7 @@
 
 \par \smallcaps{Credit for LaTeX template}: \href{https://www.overleaf.com/latex/templates/book-design-inspired-by-edward-tufte/gcfbtdjfqdjh}{Book design inspired by Edward Tufte}, by \href{https://ctan.org/pkg/tufte-latex}{The Tufte-LaTeX Developers}
 
-\par \smallcaps{978-1-951399-02-3} (print) | \smallcaps{978-1-951399-03-0} (ebook)
+\par \smallcaps{ISBN 978-1-951399-02-3} (print) | \smallcaps{978-1-951399-03-0} (ebook)
 
 \par \smallcaps{DOI} \href{https://doi.org/10.32376/3f8575cb.2e69e142}{10.32376/3f8575cb.2e69e142}
 
