Update main document

--- a/public_domain/goffman-1953/goffman-1953.tex
+++ b/public_domain/goffman-1953/goffman-1953.tex
@@ -629,7 +629,7 @@ more explicit: ``All too often'' Goffman would give her ``these stupid
 cards'' with blots and spots of colors and ask her to tell him what she
 saw. ``He told me I had a vivid imagination.'' There were also
 ``triangles and circles,'' and he would ask her what the odd one was.
-``He said I had a fair brain if I was not so idle.''\footnote{Claire
+``He said I had a fair brain if I was not so idle.''\footnote{Clair
   Auty, interviews by the author, August 1988. The administration of
   the psychology tests was a recurrent theme in the many conversations I
   had with Clair Auty.} Clearly, Goffman was applying what he had
@@ -1290,7 +1290,7 @@ May, 1951, in a small community in Great Britain.\footnote{I am very
   grateful to the Department of Social Anthropology and the Committee on
   Social Science Research of the University of Edinburgh, who financed
   and sponsored the study, and to Professors W. Lloyd Warner, Donald
-  Horton, and Anselm Strauss of the Univeristy of Chicago, who served as
+  Horton, and Anselm Strauss of the University of Chicago, who served as
   thesis advisors} The community is located on a small island, one in an
 isolated group of islands that supports a subsistence rural economy.
 
@@ -1695,7 +1695,7 @@ gentry everywhere in Britain.
 The stereotype that the gentry have of the locals seems to be similar to
 the one that prevails throughout Britain. The gentry, when by
 themselves, spend a good deal of their time recounting the latest action
-of a crafter which shows how impossible crofters really are. This sort
+of a crofter which shows how impossible crofters really are. This sort
 of talk is accompanied by much hilarity and by the applications to the
 crofters of a standard of judgment which condones the behavior of the
 crofters on the ground that nothing better is to be expected of persons
